Fix signup image placement on safari.

--- a/scss/partials/_onboard_wrapper.scss
+++ b/scss/partials/_onboard_wrapper.scss
@@ -27,7 +27,7 @@ div.onboard-wrapper-container {
       }
 
       div.onboard-wrapper-box {
-        position: relative;
+        position: absolute;
         left: 50%;
         top: 50%;
         margin-left: -147px;
